--- a/_posts/2019-07-08-the-us-narrative-today.html
+++ b/_posts/2019-07-08-the-us-narrative-today.html
@@ -2207,5 +2207,108 @@ stories:
   state: Kentucky
   domain: http://www.murrayledger.com/
   link: https://www.murrayledger.com/welch-family-in-california/image_6753c47a-a10b-11e9-a998-6fde07c1a3df.html
+images:
+- name: wind-mills-windmills-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-kand-two.jpg
+- name: lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
+- name: hollywood-building-hollywood-building-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-neo-instinct.jpg
+- name: beach-rocks-beach-rocks-currents-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-umberto-bocc.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
+- name: server-cloud-server-racks-clouds-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-internet-numbers.jpg
+- name: adam-smith-adam-smith-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-creativity.jpg
+- name: nyc-flag-nycflag-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-mucha-mult.jpg
+- name: razorcliff-razorcliff-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-rainbow-festival.jpg
+- name: window-window-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-granite.jpg
+- name: meadowbutterfly-meadow-butterfly-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-wols.jpg
+- name: oldhouse-granaryfield-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-cinnamon-rolls.jpg
+- name: oldtrain-oldtrain-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-space-pizza.jpg
+- name: fence-bw-fist-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist-blue-circuit.png
+- name: containership-containership-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-light-dali.jpg
+- name: dragon-desert-desert-dragon-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit-2.jpg
+- name: border-crossing-bordercrossing-ww2-color.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-ww2-color.png
+- name: aws-s3-stories-DSC-0084-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-DSC-0084-dali-three.jpg
+- name: berlinwall-DSC-0084-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-neo-instinct.jpg
+- name: store-on-corner-oldcabin-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-creativity.jpg
+- name: walled-garden-walled-garden-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-electricity.jpg
+- name: walled-garden-walled-garden-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purp-paper.jpg
+- name: school-clouds-church-clouds-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-green-zuma.jpg
+- name: meadowbutterfly-meadow-butterfly-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-three.jpg
+- name: window-window-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-neo-instinct.jpg
+- name: oldbarn-oldbarn-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-matrix.jpg
+- name: old-door-lock-old-door-lock-2-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-emily-carr.jpg
+- name: bluelake-hot-spicy-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-00-00-00.jpg
+- name: cargo-ship-cargo-ship-on-sea-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-gred-mash.jpg
+- name: rockingchair-rockingchair-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-emily-carr.jpg
+- name: supreme-court-supremecourt-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-space-pizza.jpg
+- name: aws-s3-tunnel-tunnel-purp-paper-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-tunnel-tunnel-purp-paper-still-600.jpg
+- name: stories-christianity-under-construction-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-atari-asteroids.jpg
+- name: aws-s3-blossombar-blossombar-still-2560.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-2560.jpg
+- name: server-cloud-server-racks-clouds-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crunch-paper.jpg
+- name: gypsy-wagon-gypsywagon-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-marcel-duchamp.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-circuit.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-aqua.jpg
+- name: power-lines-power-lines-empty-space-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-gan-vogh.jpg
+- name: old-gas-pumps-oldgaspumps-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-crunch-paper.jpg
+- name: hollywood-building-hollywood-building-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-electricity.jpg
+- name: oldhousecars-house-old-cars-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-really-hot.jpg
+- name: oldbarn-oldbarn-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-atari-asteroids.jpg
+- name: old-house-oldhouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-crabapple.jpg
+- name: nazi-invasion-IMG_4721.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4721.jpg
+- name: window-window-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sunday.jpg
+- name: beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-post-modern.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-colorful-dream.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-colorful-dream.JPG
+- name: razorwire-DSC-0080-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-mucha-mult.jpg
+- name: aws-s3-schoolhouse-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-schoolhouse-dark-dali.jpg
 ---
 'Independence Day' And 'Dazed And Confused'.&nbsp;Miami River Commission Asks City To Sink Development Plan.&nbsp;Federal Drug And Weapons Bust.&nbsp;Check Out Gods Gardens This Month.&nbsp;Volunteer Brings History Back To Life At Monocacy National Battlefield.&nbsp;Zendaya Leads Tributes To Cameron Boyce After Disney Channel Star's Death.&nbsp;First Homes Rebuilt In Camp Fire Areas Are Nearing Completion.&nbsp;Publics Help Needed In Finding Missing People.&nbsp;
